--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Nestoria</title>
+  <title>MyNestoria</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon2.png">
+  <link rel="icon" type="image/x-icon" href="/src/favicon2.png">
 </head>
 <body>
   <app-root></app-root>
